samples/_failures_safe/1761325575_4eeb45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14aaa459.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_14aaa459.c:161:17: error: expected expression at end of input
  161 |                 queue_enqueue(queue,
      |                 ^~~~~~~~~~~~~
./samples/SAFE/__tmp_14aaa459.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14aaa459.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14aaa459.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14aaa459.c:161:17: error: expected declaration or statement at end of input
